[package]
name = "test_launcher"
version = "0.1.0"
authors = ["Alfonso Ros <alfonso.ros@esrlabs.com>"]
edition = "2018"

[[bin]]
name = "spawner"
path = "src/spawner.rs"

[[bin]]
name = "test_launcher"
path = "src/main.rs"
required-features = ["launcher"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

default = []
launcher = ["plotters", "cgroups-rs"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
color-eyre = "0.5"
csv = "1.1"
escargot = "0.5.1"
lazy_static = "1.4.0"
log = "0.4"
nix = "0.19"
northstar = { path = "../northstar" }
npk = { path = "../npk" }
parse_duration = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8"
simple_logger = "1.11.0"
structopt = "0.3"
tempfile = "3.2.0"
tokio = { version = "1.0.1", features = ["rt", "rt-multi-thread", "time", "sync"] }
toml = "0.5.8"
url = "2.2.1"

plotters = { version = "0.3.0", optional = true }
cgroups-rs = { version = "0.2", optional = true }
